--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
-    compile 'io.reactivex:rxandroid:0.22.0'
+    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:palette-v7:+'
 }
