--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.PhotosActivity"
+            android:name=".navigation.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.SinglePhotoActivity" />
+        <activity android:name=".showphoto.SinglePhotoActivity" />
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="ccb0149aba84b09eadac80e9a43f01d1e893e31e" />
